Se agregan mejoras en el frontend y data annotations. Se crea tanto el navbar como la pagina de inicio.

--- a/Cheques/Views/Home/Index.cshtml
+++ b/Cheques/Views/Home/Index.cshtml
@@ -3,12 +3,13 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Sistemas de Cheques</h1>
+    <p class="lead">INTEGRACION DE APLICACIONES (ISO-810-1) Prof. Juan Pablo Valdez</p>
+    <p><a href="https://canvas.unapec.edu.do/" class="btn btn-primary btn-lg">Ir a Canvas &raquo;</a></p>
 </div>
 
 <div class="row">
+    <!--
     <div class="col-md-4">
         <h2>Getting started</h2>
         <p>
@@ -28,4 +29,6 @@
         <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
     </div>
+    -->
+    <p>Será porque aquí no hablamos inglés</p>
 </div>
