--- a/Cheques/Views/Proveedores/Edit.cshtml
+++ b/Cheques/Views/Proveedores/Edit.cshtml
@@ -26,11 +26,11 @@
     </div>
 
     <div class="form-group">
-        <label asp-for="TipoPersona" class="control-label"></label>
-        <select asp-for="TipoPersona" class="form-control">
+        <label for="TipoPersona" class="control-label"></label>
+        <select name="TipoPersona" class="form-control">
             <option disabled>Elije el tipo de persona</option>
-            <option value="Fisico">Fisico</option>
-            <option value="Juridico">Juridico</option>
+            <option value="F">Fisico</option>
+            <option value="J">Juridico</option>
         </select>
     </div>
 
